- Fixed all NPCs selling the Microcosm