@@ -1,1 +1,2 @@
 - Fixed all NPCs selling the Microcosm
+- Fixed Apotheosis dialogue not syncing
